syntax = "proto3";

option csharp_namespace = "GrpcAuthService";

package authservice;

service AuthService {
  rpc Login (LoginRequest) returns (TokenResponse);
  rpc RefreshToken (RefreshTokenRequest) returns (RefreshTokenResponse);
}

message LoginRequest {
  string neptunCode = 1;
  string password = 2;
}

message TokenResponse {
  string accessToken = 1;
  string refreshToken = 2;
}

message RefreshTokenRequest {
  string accessToken = 1;
  string refreshToken = 2;
}

message RefreshTokenResponse {
  bool success = 1;
  string accessToken = 2;
  string refreshToken = 3;
}