syntax = "proto3";

option csharp_namespace = "GrpcDatabaseService.Protos";

package user;

// User service definition
service UserService {
  rpc CreateUser (UserRequest) returns (UserResponse);
  rpc GetUser (UserIdRequest) returns (UserResponse);
  rpc UpdateUser (UserRequest) returns (UserResponse);
  rpc DeleteUser (UserIdRequest) returns (DeleteResponse);
  rpc ListUsers (GetAllUsersRequest) returns (UserListResponse);
}

message UserRequest {
  string neptun_code = 1;
  string name = 2;
  string email = 3;
  string password = 4;
}

message UserResponse {
  bool success = 1;
  string message = 2;
  UserData user = 3;
}

message UserData {
  string neptun_code = 1;
  string name = 2;
  string email = 3;
  string password = 4;
}

message UserIdRequest {
  string neptun_code = 1;
}

message UserListResponse {
  repeated UserData users = 1;
}

message GetAllUsersRequest {
	// Empty request
}

message DeleteResponse {
  bool success = 1;
  string message = 2;
}